<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/book_item_shape"
        android:elevation="10dp"
        android:padding="16dp"
        android:shadowRadius="@integer/material_motion_duration_long_1">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/purple_200"
            android:src="@drawable/default_image"
            android:contentDescription="@string/comic_image"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/bookTitle"
            style="@style/MaterialAlertDialog.Material3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/bookImage"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/btn_fav"
            android:layout_toEndOf="@id/bookImage"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/bookHits"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bookTitle"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/btn_fav"
            android:layout_toEndOf="@id/bookImage"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/description"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/btn_fav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_fav_icon"
            android:contentDescription="@string/favourite_button" />

    </RelativeLayout>


</layout>

