<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.mbanna.bookshelf.viewModel.SignUpViewModel" />

    </data>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".view.fragment.SignupFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/imageLogo"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"

                    android:contentDescription="@string/welcome_splash_logo"
                    android:src="@drawable/app_logo"

                    app:layout_constraintBottom_toTopOf="@+id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="#3B0345"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageLogo" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/signup"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/signupLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="50dp"
                    android:paddingBottom="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signup">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/custom_username_icon"
                        android:drawablePadding="10dp"

                        android:hint="@string/username"
                        android:importantForAutofill="no"
                        android:inputType="text"

                        android:padding="10dp"
                        android:text="@={viewModel.inputUsername}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/name" />

                    <TextView
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/choose_country"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputName" />

                    <Spinner
                        android:id="@+id/countrySpinner"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/custom_username_icon"
                        android:drawablePadding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/lastname"
                        android:selectedItemPosition="@={viewModel.selectedCountryLiveData}"
                        />

                    <TextView
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/password"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/countrySpinner" />

                    <EditText
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/custom_password_icon"
                        android:drawablePadding="10dp"

                        android:hint="@string/type_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="10dp"

                        android:text="@={viewModel.inputPassword}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/password" />

                    <TextView
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/confirm_password"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/inputPassword" />

                    <EditText
                        android:id="@+id/confirmInputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/custom_edit_text"
                        android:drawableStart="@drawable/custom_password_icon"
                        android:drawablePadding="10dp"

                        android:hint="@string/confirm_password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"

                        android:padding="10dp"
                        android:text="@={viewModel.inputConfirmPassword}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/confirm_password" />

                    <Button
                        android:id="@+id/signupButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_gradient"

                        android:text="@string/signup"

                        app:backgroundTint="@null"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/confirmInputPassword" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
