<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.activity.BookShelf">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/clRoot"
            app:layout_constraintBottom_toTopOf="@id/recyclerView">

            <TextView
                android:id="@+id/tvSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnTitle" />

            <TextView
                android:id="@+id/btnTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_title"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/shape_sort_button"
                android:backgroundTint="@color/grey"
                app:layout_constraintTop_toTopOf="@id/tvSortBy"
                app:layout_constraintBottom_toBottomOf="@id/tvSortBy"
                app:layout_constraintStart_toEndOf="@id/tvSortBy"
                app:layout_constraintEnd_toStartOf="@id/btnHits"
                app:layout_constraintHorizontal_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/btnHits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_hits"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintTop_toTopOf="@id/tvSortBy"
                android:backgroundTint="@color/grey"
                android:background="@drawable/shape_sort_button"
                app:layout_constraintBottom_toBottomOf="@id/tvSortBy"
                app:layout_constraintStart_toEndOf="@id/btnTitle"
                app:layout_constraintEnd_toEndOf="@id/btnFavBy"
                app:layout_constraintHorizontal_chainStyle="spread_inside" />

            <TextView
                android:id="@+id/btnFavBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/favorite"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="@id/tvSortBy"
                android:backgroundTint="@color/grey"
                android:background="@drawable/shape_sort_button"
                app:layout_constraintBottom_toBottomOf="@id/tvSortBy"
                app:layout_constraintStart_toEndOf="@id/btnHits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside" />
        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            tools:listitem="@layout/item_book_row"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clSortBy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>